Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.9.1.6
  Manual: Introduction update (#2011365)
  Manual: Reorganize structure (#2011924)
  Add ShellExtension menu for drive letters (root folders) (#2011602)

WinMerge 2.10.x (R2_10) branch created (r5561)

WinMerge 2.9.1.5 - 2008-07-04 (r5560)
  Manual: Copy editing (#2000322, #2005418)
  Manual: Clarify 64-bit support (#2002431)
  Reduce executable sizes (#2003203)
  Release Notes update (#2007673, r5557)
  BugFix: Possible crash when enabling line filter (#2004160)
  BugFix: Location Pane flickers when scrolling (#1938177, #2005031)
  BugFix: Use system codepage for paths (#1979429, #2008581)
  BugFix: Random crashes in folder compare (#2005308)
  Translation updates:
  - Chinese Traditional (#2007426)

WinMerge 2.9.1.4 - 2008-06-24 (r5518)
  Use PCRE regular expressions in the editor (#1991259)
  Installer: install to all users (#1460517)
  Update release notes (#1990886, #1995265, #1999880)
  Manual: Use PNG files (#1988845, #1989744)
  BugFix: Temp paths in Reports created from archive file (#1984346)
  BugFix: ISL file syntax highlighting starts comment with { (#1981326)
  BugFix: Crash when starting a second instance (#1993835)
  BugFix: Crash when starting WinMerge with only one path (#1994402)
  BugFix: Messages missing from installer translations (r5506)
  BugFix: Always right side as origin side in copy confirmation dialog
    when Copy To... (#2001237)
  New translation: Slovenian (#1997236)
  Translation updates:
  - Brazilian (#1994578)
  - Swedish (#2000307)

WinMerge 2.9.1.3 - 2008-06-05 (r5438)
  Update PCRE (regular expression library) to version 7.7 (#1941779)
  Add VB.net keywords to Basic highlighter (#1970912)
  Open conflict files by drag & dropping to main window (#1984884)
  Possible improvement for WinMerge exit bug (#1602313)